locking possibility and prepared possible fix for text flickering when receiving data

--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,9 @@
         background-color: transparent;
     }
 }
+
+
+.cdx-realtime-block--locked {
+    pointer-events: none;
+    opacity: 0.6;
+}
